SIMPLIFICATION UI: Raccourcis sur toutes les pages + messages d'aide explicites + tooltips contextuels

--- a/templates/base.html
+++ b/templates/base.html
@@ -836,6 +836,15 @@
     <!-- Notifications Rapides -->
     {% include 'includes/quick_notifications.html' %}
     
+    <!-- Messages d'aide contextuels -->
+    {% include 'includes/help_messages.html' %}
+    
+    <!-- Tooltips d'aide -->
+    {% include 'includes/help_tooltips.html' %}
+    
+    <!-- Messages d'erreur améliorés -->
+    {% include 'includes/help_error_messages.html' %}
+    
     <!-- Pied de page avec image -->
     {% include 'includes/footer_only.html' %}
 </body>
