--- a/templates/base_dashboard.html
+++ b/templates/base_dashboard.html
@@ -503,5 +503,23 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
     {% block extra_js %}{% endblock %}
+    
+    <!-- Actions Rapides -->
+    {% include 'includes/quick_actions.html' %}
+    
+    <!-- Recherche Globale -->
+    {% include 'includes/global_search.html' %}
+    
+    <!-- Notifications Rapides -->
+    {% include 'includes/quick_notifications.html' %}
+    
+    <!-- Messages d'aide contextuels -->
+    {% include 'includes/help_messages.html' %}
+    
+    <!-- Tooltips d'aide -->
+    {% include 'includes/help_tooltips.html' %}
+    
+    <!-- Messages d'erreur améliorés -->
+    {% include 'includes/help_error_messages.html' %}
 </body>
 </html> 
